--- a/generic_report_client/src/main/webapp/components/header.html
+++ b/generic_report_client/src/main/webapp/components/header.html
@@ -16,145 +16,27 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-left">
-      <li class="navbar-title">UI Component Kits</li>
-      <li class="navbar-search hidden-sm">
-        <input id="search" type="text" placeholder="Search..">
-        <button class="btn-search"><i class="fa fa-search"></i></button>
+      <li class="navbar-title" id="navbar_title_li">UI Component Kits</li>
+      <li class="navbar-search hidden-sm" id="navbar_search_li" style="display:none">
+        <input id="search_input" type="text" placeholder="Search..">
+        <button class="btn-search" onclick="SearchPOJO.search()" type="submit"><i class="fa fa-search"></i></button>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li class="dropdown notification">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <div class="icon"><i class="fa fa-shopping-basket" aria-hidden="true"></i></div>
-          <div class="title">New Orders</div>
-          <div class="count">0</div>
-        </a>
-        <div class="dropdown-menu">
-          <ul>
-            <li class="dropdown-header">Ordering</li>
-            <li class="dropdown-empty">No New Ordered</li>
-            <li class="dropdown-footer">
-              <a href="#">View All <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="dropdown notification warning">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <div class="icon"><i class="fa fa-comments" aria-hidden="true"></i></div>
-          <div class="title">Unread Messages</div>
-          <div class="count">99</div>
-        </a>
-        <div class="dropdown-menu">
-          <ul>
-            <li class="dropdown-header">Message</li>
-            <li>
-              <a href="#">
-                <span class="badge badge-warning pull-right">10</span>
-                <div class="message">
-                  <img class="profile" src="https://placehold.it/100x100">
-                  <div class="content">
-                    <div class="title">"Payment Confirmation.."</div>
-                    <div class="description">Alan Anderson</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="badge badge-warning pull-right">5</span>
-                <div class="message">
-                  <img class="profile" src="https://placehold.it/100x100">
-                  <div class="content">
-                    <div class="title">"Hello World"</div>
-                    <div class="description">Marco Harmon</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="badge badge-warning pull-right">2</span>
-                <div class="message">
-                  <img class="profile" src="https://placehold.it/100x100">
-                  <div class="content">
-                    <div class="title">"Order Confirmation.."</div>
-                    <div class="description">Brenda Lawson</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li class="dropdown-footer">
-              <a href="#">View All <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="dropdown notification danger">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <div class="icon"><i class="fa fa-bell" aria-hidden="true"></i></div>
-          <div class="title">System Notifications</div>
-          <div class="count">10</div>
-        </a>
-        <div class="dropdown-menu">
-          <ul>
-            <li class="dropdown-header">Notification</li>
-            <li>
-              <a href="#">
-                <span class="badge badge-danger pull-right">8</span>
-                <div class="message">
-                  <div class="content">
-                    <div class="title">New Order</div>
-                    <div class="description">$400 total</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="badge badge-danger pull-right">14</span> Inbox
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="badge badge-danger pull-right">5</span> Issues Report
-              </a>
-            </li>
-            <li class="dropdown-footer">
-              <a href="#">View All <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-            </li>
-          </ul>
-        </div>
-      </li>
-      <li class="dropdown profile">
+      <li class="dropdown profile" id="user_info_div">
         <a href="/html/pages/profile.html" class="dropdown-toggle" data-toggle="dropdown" style="margin-right: 18px;">
           <img id="logo-img-profile" class="profile-img">
           <div class="title">Profile</div>
         </a>
         <div class="dropdown-menu" style="margin-right: 15px;">
           <div class="profile-info">
-            <h4 class="username">Liu Yang</h4>
+            <h4 class="username"><span class="hidden-sm" data-bind="text: userName"></span></h4>
           </div>
           <ul class="action">
             <li>
-              <a href="#">
-            Profile
-          </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="badge badge-danger pull-right">5</span> My Inbox
+              <a onclick="location.href = $.getRootPath() + '/logout'" href="#">
+                Logout
               </a>
-            </li>
-            <li>
-              <a href="#">
-            Setting
-          </a>
-            </li>
-            <li>
-              <a href="#">
-            Logout
-          </a>
             </li>
           </ul>
         </div>
@@ -167,4 +49,50 @@
   var src = $.getRootPath() + '/assets/reference/flat-admin/assets/images/profile.png';
   $("#logo-img").attr("src", src);
   $("#logo-img-profile").attr("src", src);
+</script>
+
+
+<script>
+  var userNameModel = {
+    userName: ko.observable(""),
+    getUserDetail: function() {
+      if (typeof(UserPOJO.user) != 'undefind' && UserPOJO.user != null) {
+        //                console.log("get data from cache")
+        userNameModel.reloadData();
+      } else {
+        //                console.log("get data from server")
+        UserPOJO.getCurrentUser("RELOAD_USER_DETAIL_SUCCESS");
+      }
+    },
+    getUserDetailSuccessHandler: function() {
+      userNameModel.reloadData();
+      $.publish("get_user_detail_chain_finished");
+    },
+    reloadData: function() {
+      userNameModel.userName(UserPOJO.user.userName);
+    },
+  }
+
+  ko.applyBindings(userNameModel, document.getElementById('user_info_div'));
+
+  userNameModel.getUserDetail();
+  $.subscribe("RELOAD_USER_DETAIL_SUCCESS", userNameModel.getUserDetailSuccessHandler);
+</script>
+
+<script>
+  $('#search_input').on('keypress', function(event) {
+    if (event.keyCode == 13){
+      SearchPOJO.search();
+    }
+  });
+  var SearchPOJO = {
+    listener: null,
+    keywords: null,
+    search: function() {
+      if (SearchPOJO.listener) {
+        SearchPOJO.keywords = $('#search_input').val();
+        SearchPOJO.listener();
+      }
+    }
+  }
 </script>
