--- a/generic_charting_client/src/main/webapp/components/left_side.html
+++ b/generic_charting_client/src/main/webapp/components/left_side.html
@@ -49,6 +49,39 @@
           </ul>
         </div>
       </li>
+      <li id="li_dash_gallery" class="dropdown ">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <div class="icon">
+            <i class="fa fa-cube" aria-hidden="true"></i>
+          </div>
+          <div class="title">Dashboard Gallery</div>
+        </a>
+        <div class="dropdown-menu">
+          <ul>
+            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> My Dashboards</li>
+            <li><a href="/generic_charting_client/module_gallery_saved_self.html">Saved Dashboards</a></li>
+            <li><a href="/generic_charting_client/module_gallery_shared_self.html">Shared Dashboards</a></li>
+            <li class="line"></li>
+            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> Dashboards Storage</li>
+            <li><a href="/generic_charting_client/module_gallery_shared_all.html">Shared Dashboards</a></li>
+          </ul>
+        </div>
+      </li>
+      <li id="li_dash_kits" class="dropdown ">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <div class="icon">
+            <i class="fa fa-mortar-board" aria-hidden="true"></i>
+          </div>
+          <div class="title">Dashboard Kits</div>
+        </a>
+        <div class="dropdown-menu">
+          <ul>
+            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> My Dashboard Kits</li>
+            <li><a href="/generic_charting_client/module_dashboard_editor.html">Dashboard Editor</a></li>
+            <li><a href="/generic_charting_client/module_dashboard_viewer.html">Dashboard Viewer</a></li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </div>
   <div class="sidebar-footer">
