--- a/generic_charting_client/src/main/webapp/components/left_side.html
+++ b/generic_charting_client/src/main/webapp/components/left_side.html
@@ -82,6 +82,14 @@
           </ul>
         </div>
       </li>
+      <li id="li_data_source">
+        <a href="/generic_charting_client/module_data_source.html">
+          <div class="icon">
+            <i class="fa fa-dashboard" aria-hidden="true"></i>
+          </div>
+          <div class="title">Data Source</div>
+        </a>
+      </li>
     </ul>
   </div>
   <div class="sidebar-footer">
