Revert "Merge branch 'ly'"
This reverts commit cd438e8badf39849a0d272732e4767b88d155738

--- a/generic_charting_client/src/main/webapp/components/footer.html
+++ b/generic_charting_client/src/main/webapp/components/footer.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="footer-copyright">
-        Copyright © 2017 MATRIX
+        Copyright © 2016 MATRIX Company Co,Ltd.
       </div>
     </div>
   </div>
