--- a/generic_datasource_client/src/main/webapp/components/left_side.html
+++ b/generic_datasource_client/src/main/webapp/components/left_side.html
@@ -40,7 +40,8 @@
         <div class="dropdown-menu">
           <ul>
             <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i>Data Source Kits</li>
-            <li><a href="/generic_datasource_client/business_kit.html">Kit</a></li>
+            <li><a href="/generic_datasource_client/business_kit.html">Kit From API</a></li>
+            <li><a href="/generic_datasource_client/business_kit_db.html">Kit From Database</a></li>
           </ul>
         </div>
       </li>
