使用jQuery订阅和回调函数代替setTimeout，解决多个js文件使用全局变量依赖问题

--- a/generic_report_client/src/main/webapp/components/header.html
+++ b/generic_report_client/src/main/webapp/components/header.html
@@ -70,8 +70,8 @@
     },
     reloadData: function() {
       userNameModel.userName(UserPOJO.user.userName);
-    },
-  }
+    }
+  };
 
   ko.applyBindings(userNameModel, document.getElementById('user_info_div'));
 
@@ -81,7 +81,7 @@
 
 <script>
   $('#search_input').on('keypress', function(event) {
-    if (event.keyCode == 13){
+    if (event.keyCode === 13){
       SearchPOJO.search();
     }
   });
@@ -94,5 +94,5 @@
         SearchPOJO.listener();
       }
     }
-  }
+  };
 </script>
