description and uptoODA

--- a/generic_report_client/src/main/webapp/components/left_side.html
+++ b/generic_report_client/src/main/webapp/components/left_side.html
@@ -27,6 +27,7 @@
             <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> My Reports</li>
             <li><a href="/generic_report_client/module_gallery_saved_self.html">Saved Reports</a></li>
             <li><a href="/generic_report_client/module_gallery_shared_self.html">Shared Reports</a></li>
+            <li><a href="/generic_report_client/module_gallary_dataset_description.html">Dataset Description Report</a></li>
             <li class="line"></li>
             <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> Reports Storage</li>
             <li><a href="/generic_report_client/module_gallery_shared_all.html">Shared Reports</a></li>
