--- a/generic_portal_client/src/main/webapp/components/header.html
+++ b/generic_portal_client/src/main/webapp/components/header.html
@@ -16,7 +16,7 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-left">
-      <li class="navbar-title" id="navbar_title_li">UI Component Kits</li>
+      <li class="navbar-title" id="navbar_title_li"></li>
       <li class="navbar-search hidden-sm" id="navbar_search_li" style="display:none">
         <input id="search_input" type="text" placeholder="Search..">
         <button class="btn-search" onclick="SearchPOJO.search()" type="submit"><i class="fa fa-search"></i></button>
@@ -84,7 +84,7 @@
           }
         },
         error: function(xhr, status) {
-          console.log('Sorry, there was a problem on page check status!');
+          // console.log('Sorry, there was a problem on page check status!');
           // location.href = $.getRootPath() + "/login.html";
           userNameModel.hasLogin(false);
         },
