--- a/generic_dashboard_client/src/main/webapp/components/header.html
+++ b/generic_dashboard_client/src/main/webapp/components/header.html
@@ -16,7 +16,7 @@
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-left">
-      <li class="navbar-title" id="navbar_title_li">UI Component Kits</li>
+      <li class="navbar-title" id="navbar_title_li"></li>
       <li class="navbar-search hidden-sm" id="navbar_search_li" style="display:none">
         <input id="search_input" type="text" placeholder="Search..">
         <button class="btn-search" onclick="SearchPOJO.search()" type="submit"><i class="fa fa-search"></i></button>
