--- a/generic_dashboard_client/src/main/webapp/components/left_side.html
+++ b/generic_dashboard_client/src/main/webapp/components/left_side.html
@@ -9,93 +9,32 @@
   <div class="sidebar-menu" style="transition: all 0.25s linear;">
     <ul class="sidebar-nav">
       <li id="li_dashboard">
-        <a href="/matrix_components_v3/index.html">
+        <a href="/generic_dashboard_client/module_dashboard.html">
           <div class="icon">
             <i class="fa fa-dashboard" aria-hidden="true"></i>
           </div>
-          <div class="title">Components</div>
+          <div class="title">Overview</div>
+        </a>
+      </li>
+      <li id="li_gallery">
+        <a href="/generic_dashboard_client/module_gallery.html">
+          <div class="icon">
+            <i class="fa fa-cube" aria-hidden="true"></i>
+          </div>
+          <div class="title">Gallery</div>
         </a>
       </li>
       <li id="li_kits" class="dropdown ">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <div class="icon">
-            <i class="fa fa-cube" aria-hidden="true"></i>
+            <i class="fa fa-gavel" aria-hidden="true"></i>
           </div>
-          <div class="title">UI Kits</div>
+          <div class="title">Kits</div>
         </a>
         <div class="dropdown-menu">
           <ul>
-            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> UI Kits</li>
-            <li><a href="/matrix_components_v3/components/component_header.html">Header</a></li>
-            <li><a href="/matrix_components_v3/components/component_assist.html">Assit</a></li>
-            <li><a href="/matrix_components_v3/components/component_card.html">Card</a></li>
-            <li><a href="/matrix_components_v3/components/component_alerts.html">Alert</a></li>
-            <li><a href="/matrix_components_v3/components/component_progress.html">Progress</a></li>
-            <li><a href="/matrix_components_v3/components/component_loader.html">Loader</a></li>
-            <li><a href="/matrix_components_v3/components/component_blocker.html">Block</a></li>
-            <li><a href="/matrix_components_v3/components/component_step.html">Step</a></li>
-            <li><a href="/matrix_components_v3/components/component_upload.html">Upload</a></li>
-            <li><a href="/matrix_components_v3/components/component_table_pager.html">Table Pager</a></li>
-            <!-- <li><a href="/matrix_components_v3/components/component_breadcrum.html">Breadcrum</a></li> -->
-            <!-- <li class="line"></li> -->
-          </ul>
-        </div>
-      </li>
-      <li id="li_advanced_kits" class="dropdown ">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <div class="icon">
-            <i class="fa fa-plane" aria-hidden="true"></i>
-          </div>
-          <div class="title">Advanced Kits</div>
-        </a>
-        <div class="dropdown-menu">
-          <ul>
-            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> Advanced Components</li>
-            <li><a href="/matrix_components_v3/components/component_server_request.html">Server Request</a></li>
-            <li><a href="/matrix_components_v3/components/component_modal.html">Modal</a></li>
-            <li><a href="/matrix_components_v3/components/component_table.html">Client Table</a></li>
-            <li><a href="/matrix_components_v3/components/component_query.html">Server Table</a></li>
-            <li><a href="/matrix_components_v3/components/component_tree.html">Tree</a></li>
-            <li><a href="/matrix_components_v3/components/component_share.html">Share</a></li>
-            <li><a href="/matrix_components_v3/components/component_dashboard.html">Dashboard</a></li>
-            <li><a href="/matrix_components_v3/components/component_clone.html">Clone</a></li>
-          </ul>
-        </div>
-      </li>
-      <li id="li_ultra_kits" class="dropdown ">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <div class="icon">
-            <i class="fa fa-rocket" aria-hidden="true"></i>
-          </div>
-          <div class="title">Ultra Kits</div>
-        </a>
-        <div class="dropdown-menu">
-          <ul>
-            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> Ultra Components</li>
-            <li><a href="/matrix_components_v3/components/component_dynamic_table.html">Dynamic Table</a></li>
-            <!-- <li><a href="/matrix_components_v3/components/component_statistic.html">Dynamic Statistic</a></li>
-            <li><a href="/matrix_components_v3/components/component_query_chain.html">Query Chain</a></li>
-            <li><a href="/matrix_components_v3/components/component_query_scroll.html">Query Scroll</a></li> -->
-            <li><a href="/matrix_components_v3/components/component_matrix_template.html">Template</a></li>
-            <li><a href="/matrix_components_v3/components/component_matrix_template_add.html">Template ADD</a></li>
-            <li><a href="/matrix_components_v3/components/component_matrix_template_search.html">Template SEARCH</a></li>
-            <li><a href="/matrix_components_v3/components/component_matrix_template_search_scroll.html">Template SCROLL</a></li>
-            <li><a href="/matrix_components_v3/components/component_matrix_template_statistic.html">Template STATISTIC</a></li>
-            <li><a href="/matrix_components_v3/components/component_matrix_template_chain.html">Template CHAIN</a></li>
-          </ul>
-        </div>
-      </li>
-      <li id="li_prototype" class="dropdown ">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <div class="icon">
-            <i class="fa fa-rocket" aria-hidden="true"></i>
-          </div>
-          <div class="title">Matrix Prototype</div>
-        </a>
-        <div class="dropdown-menu">
-          <ul>
-            <li class="section"><i class="fa fa-puzzle-piece" aria-hidden="true"></i> Prototypes</li>
-            <li><a href="/matrix_components_v3/components/prototype_business.html">Business Prototype</a></li>
+            <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> Kits</li>
+            <li><a href="/generic_dashboard_client/module_kit_dashboard.html">Dashboard Kit</a></li>
           </ul>
         </div>
       </li>
