database dynamic table

--- a/generic_datasource_client/src/main/webapp/components/left_side.html
+++ b/generic_datasource_client/src/main/webapp/components/left_side.html
@@ -8,14 +8,14 @@
   </div>
   <div class="sidebar-menu" style="transition: all 0.25s linear;">
     <ul class="sidebar-nav">
-      <li id="li_dashboard">
+<!--      <li id="li_dashboard">
         <a href="/generic_datasource_client/business_summary.html">
           <div class="icon">
             <i class="fa fa-dashboard" aria-hidden="true"></i>
           </div>
           <div class="title">Dashboard</div>
         </a>
-      </li>
+      </li>-->
       <li id="li_gallery" class="dropdown ">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <div class="icon">
