--- a/generic_chart_client/src/main/webapp/components/left_side.html
+++ b/generic_chart_client/src/main/webapp/components/left_side.html
@@ -15,14 +15,14 @@
           <div class="title">Dashboard</div>
         </a>
       </li>
-      <li id="li_gallery" class="dropdown ">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <li id="li_gallery">
+        <a href="/generic_chart_client/module_gallery_saved_self.html">
           <div class="icon">
             <i class="fa fa-cube" aria-hidden="true"></i>
           </div>
           <div class="title">Chart Gallery</div>
         </a>
-        <div class="dropdown-menu">
+<!--        <div class="dropdown-menu">
           <ul>
             <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> My Charts</li>
             <li><a href="/generic_chart_client/module_gallery_saved_self.html">Saved Charts</a></li>
@@ -31,7 +31,7 @@
             <li class="section"><i class="fa fa-file-o" aria-hidden="true"></i> Charts Storage</li>
             <li><a href="/generic_chart_client/module_gallery_shared_all.html">Shared Charts</a></li>
           </ul>
-        </div>
+        </div>-->
       </li>
       <li id="li_kits" class="dropdown ">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
