动态图取消datazoom

--- a/generic_dashboard_client/src/main/webapp/components/template-matrix-dynamic-table.html
+++ b/generic_dashboard_client/src/main/webapp/components/template-matrix-dynamic-table.html
@@ -2,7 +2,7 @@
     <div class="table_div_class">
       <div class="row" data-bind="with:tableModel">
         <div class="col-xs-12">
-          <div style="overflow: auto">
+          <div style="overflow: hidden">
           <table class="table table-striped table-hover" cellspacing="0">
             <thead>
               <tr>
